--- a/spring-cloud-gcp-samples/spring-cloud-gcp-param-config-sample/README.adoc
+++ b/spring-cloud-gcp-samples/spring-cloud-gcp-param-config-sample/README.adoc
@@ -1,45 +1,33 @@
-= Spring Framework on Google Cloud Config Client Starter Code Sample
-
-This sample application demonstrates using the link:../../spring-cloud-gcp-starters/spring-cloud-gcp-starter-config[Spring Framework on Google Cloud Config Client Starter] in your code.
-
-The same content is also available in the https://codelabs.developers.google.com/codelabs/cloud-spring-runtime-config/index.html[Dynamic configuration for Spring Boot applications] codelab.
+= Spring Framework on Google Cloud ParamConfig Starter Code Sample
 
 == Setup & Configuration
 
-image:http://gstatic.com/cloudssh/images/open-btn.svg[link=https://ssh.cloud.google.com/cloudshell/editor?cloudshell_git_repo=https%3A%2F%2Fgithub.com%2FGoogleCloudPlatform%2Fspring-cloud-gcp&cloudshell_open_in_editor=spring-cloud-gcp-samples/spring-cloud-gcp-config-sample/README.adoc]
-
 1. Run `$ mvn clean install` from the root directory of the project.
-2. Move to the config sample directory by running `$ cd spring-cloud-gcp-samples/spring-cloud-gcp-config-sample`
+2. Move to the config sample directory by running `$ cd spring-cloud-gcp-samples/spring-cloud-gcp-paramconfig-sample`
 3. Checkout the code of this sample.
-4. Enable the Google https://console.cloud.google.com/apis/api/runtimeconfig.googleapis.com/overview[Runtime Configuration API].
-5. Create a configuration using the https://cloud.google.com/sdk/[Google Cloud SDK].
+4. Enable the Google https://console.cloud.google.com/marketplace/product/google/parametermanager.googleapis.com[Parameter Manager API].
+5. Create a parameter using the https://cloud.google.com/sdk/[Google Cloud SDK].
 +
 ....
-$ gcloud beta runtime-config configs create myapp_prod
+$ gcloud beta parametermanager parameters create myapp --location=global --parameter-format=JSON
 ....
 +
-Then set the variables that your application will load:
+Then create a version that your application will load:
 +
 ....
-$ gcloud beta runtime-config configs variables set \
-  myapp.queue-size 25 \
-  --config-name myapp_prod
-
-$ gcloud beta runtime-config configs variables set \
-  myapp.feature-x-enabled true \
-  --config-name myapp_prod
+$ gcloud beta parametermanager parameters versions create prod --parameter=myapp --location=global --payload-data="{\"username\":\"test-user\",\"password\":\"test-password\"}"
 ....
 
 6.  Update link:src/main/resources/bootstrap.properties[]:
 +
 ....
 spring.cloud.gcp.config.enabled=true
-spring.cloud.gcp.config.name=myapp
+spring.application.name=myapp
 
 #default profile = default
-spring.cloud.gcp.config.profile=prod
+spring.profiles.active=prod
 ....
-7.  Notice that link:src/main/java/com/example/MyAppProperties.java[MyAppProperties.java] uses `@ConfigurationProperties` to bind the `myapp` namespace from the environment.
+7.  Notice that link:src/main/java/com/example/MyParamAppProperties.java[MyParamAppProperties.java] uses `@ConfigurationProperties` to bind the `myapp` namespace from the environment.
 
 8. Note that in order to expose /actuator/refresh endpoint, link:src/resources/application.properties[application.properties] file includes the following property:
 +
@@ -47,16 +35,12 @@ spring.cloud.gcp.config.profile=prod
 management.endpoints.web.exposure.include=refresh
 ....
 9.  Run the application using the `$ mvn spring-boot:run` command and verify the values are set appropriately at http://localhost:8080/ or use the `Web Preview` button in Cloud Shell to preview the app on port 8080.
-10.  Update a property with `gcloud`:
+10.  Update a property with `gcloud`. For Parameter Manager, need to delete and create the version:
 +
 ....
-$ gcloud beta runtime-config configs variables set \
-  myapp.queue-size 200 \
-  --config-name myapp_prod
+$ gcloud beta parametermanager parameters versions delete prod --parameter=myapp --location=global
 
-$ gcloud beta runtime-config configs variables set \
-  myapp.feature-x-enabled false \
-  --config-name myapp_prod
+$ gcloud beta parametermanager parameters versions create prod --parameter=myapp --location=global --payload-data="{\"username\":\"test-user\",\"password\":\"test-password-refreshed\"}"
 ....
 11.  Send a POST request to the refresh endpoint:
 +
